# board

./: package.json  pnpm-lock.yaml
backend/: Cargo.toml  db.sqlite  schema.sql
backend/src/: main.rs
frontend/: .gitignore  package-lock.json
frontend/src/: test_state.svelte.ts
frontend/src/lib/: old.ts  state.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/test/: +page.svelte
src/: app.html
src/lib/: state.ts
src/routes/: +page.svelte
