[package]
name = "board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing-subscriber = "0.3"
parking_lot = "0.12"
futures = "0.3"

# SQL
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "macros",
  "derive",
] }

# Web
axum = { version = "0.7", features = ["ws"] }
axum-macros = "0.4"
# axum-login = "0.16"
# password-auth = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
